--- a/src/userinterface/pages/home/HomePage.scss
+++ b/src/userinterface/pages/home/HomePage.scss
@@ -16,7 +16,7 @@
     align-items: center;
     justify-content: center;
     max-width: 500px;
-    height: 100%;
-    margin: auto;
+    padding-top: 70px;
+    margin: 0 auto;
   }
 }
