[update] dark/light mode

--- a/src/shared/styles/index.scss
+++ b/src/shared/styles/index.scss
@@ -1,70 +1,31 @@
 @import './reset.scss';
 @import './variables.scss';
 
-:root {
-  --color-background-accent: #{$white-base};
-  --color-text-base: #{$black-base};
-  --color-text-rev-base: #{$white-light};
-}
-
-@media (prefers-color-scheme: dark) {
-  :root.dark {
-    --color-background-base: #{$black-base};
-    --color-text-base: #{$white-light};
-    --color-text-rev-base: #{$black-base};
-  }
-}
-
-:root.dark {
-  --color-background-base: #{$black-base};
-  --color-text-base: #{$white-light};
-  --color-text-rev-base: #{$black-base};
-}
-
 body {
-  background-color: var(--color-background-accent);
-
-  &.dark-theme {
-    background-color: $black-dark;
-
-    .todo-form, .todo-list {
-      background-color: $black-base;
-    }
-
-    .todo-card__title {
-      color: $white;
-    }
-  }
-
-  .todo-form, .todo-list {
-    background-color: $white-base;
-  }
-
-  .todo-card__title {
-    color: $black-base;
-  }
+  background-color: var(--background-color);
+  font-family: system-ui;
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 32px;
   font-weight: 700;
-  color: $black-base;
+  color: var(--font-color);
 }
 
 h2 {
   font-size: 18px;
   font-weight: 700;
-  color: $black-base;
+  color: var(--font-color);
 }
 
 h3 {
   font-size: 16px;
   font-weight: 600;
-  color: $black-base;
+  color: var(--font-color);
 }
 
 p {
   font-size: 14px;
   font-weight: 500;
-  color: $black-base;
+  color: var(--font-color);
 }
