--- a/src/userinterface/components/todos/TodoForm/TodoForm.scss
+++ b/src/userinterface/components/todos/TodoForm/TodoForm.scss
@@ -1,7 +1,10 @@
+@import "../../../../shared/styles/variables.scss";
+
 .todo-form {
   width: 100%;
   border-radius: 4px;
   padding: 1rem;
+  background-color: var(--background-color-light);
 
   &__form {
     display: flex;
