--- a/src/userinterface/components/todos/TodoList/TodoList.scss
+++ b/src/userinterface/components/todos/TodoList/TodoList.scss
@@ -25,6 +25,7 @@
 
         li {
           cursor: pointer;
+          font-size: 12px;
           font-weight: 700;
           color: var(--font-color);
 
