--- a/src/shared/styles/index.scss
+++ b/src/shared/styles/index.scss
@@ -25,7 +25,7 @@ h3 {
 }
 
 p {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
-  color: var(--font-color);
+  color: var(--font-color-light);
 }
