--- a/src/userinterface/components/todos/TodoCard/TodoCard.scss
+++ b/src/userinterface/components/todos/TodoCard/TodoCard.scss
@@ -1,4 +1,4 @@
-@import '../../../../shared/styles/variables.scss';
+@import "../../../../shared/styles/variables.scss";
 
 .todo-card {
   width: 100%;
@@ -6,11 +6,25 @@
   align-items: center;
   gap: 1rem;
   padding: 1rem;
-  border-bottom: 1px solid rgba(0, 0, 0, .1);
-  cursor: pointer;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
-  h3.completed {
-    text-decoration: line-through;
-    color: var(--font-color-light);
+  &:hover &__icon {
+    display: block !important;
+  }
+
+  h3 {
+    flex: 1;
+    max-width: 400px;
+
+    &.completed {
+      text-decoration: line-through;
+      color: var(--font-color-light);
+    }
+  }
+
+  &__icon {
+    cursor: pointer;
+    width: 16px;
+    display: none;
   }
 }
